# bmx

./: CHANGELOG.md  CONTRIBUTING.md  README.md
.github/workflows/: codeql.yml
apps/: CMakeLists.txt
apps/bmxparse/: CMakeLists.txt
apps/bmxtranswrap/: CMakeLists.txt
apps/mxf2raw/: CMakeLists.txt
apps/raw2bmx/: CMakeLists.txt  raw2bmx.cpp
cmake/: ext_expat.cmake
docker/: bmx_docker.sh
docs/: audio_definition_model.md  imf_audio_track_files.md  imf_jpeg_2000_track_files.md  imf_prores_track_files.md  imf_track_files.md  release.md
docs/bmx_history/: bmx_origins.md
meta/rdd6_xml_creator/: README.md
